# python-base

./: .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  README.rst  cookiecutter.json  dev-reference.md  noxfile.py  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.cfg.bak
.github/workflows/: pytest-on-push.yaml
dev_docs/: dev-reference.md  placeholders.md  project_setup.md
docs/source/: changelog.rst  conf.py  index.rst  python_base_cli.rst
hooks/: post_gen_project.py
requirements/: dev.txt  main.txt
scripts/: dev-tool.sh
src/project_slug/: __init__.py
src/python_base/: __init__.py  python_base_cli.py
tests/project_slug/: conftest.py  test_minimal.py
tests/python_base/: __init__.py  test_console.py
{{cookiecutter.project_slug}}/: .pylintrc  CHANGELOG-TEMPLATE.rst  CHANGELOG.rst  INSTALLATION.rst  pyproject.toml  setup.cfg.bak
{{cookiecutter.project_slug}}/docs/source/: changelog.rst  conf.py  index.rst
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __init__.py  cli_argparse.py  cli_click.py  library.py
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/cli/: cli_click.py  cli_typer.py
{{cookiecutter.project_slug}}/tests/{{ cookiecutter.project_slug }}/: conftest.py  test_click.py  test_library.py  test_minimal.py  test_typer.py
