[metadata]
name = python_base
version = 0.1.0
url = https://github.com/DonalChilde/python-base
description = Python project generator
long_description = file: README.md, CHANGELOG.rst
keywords = Python cookiecutter
license = MIT license
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
package_dir=
    =src
packages = find:
tests_require = pytest
# setup_requires = pytest-runner

# [options.entry_points]
# console_scripts =
#     aa-pbs-exporter = aa_pbs_exporter.cli.main_cli:main

[options.package_data]
* = *.txt, *.rst
hello = *.msg

[options.packages.find]
where=src

[bdist_wheel]
universal = 1

[flake8]
exclude = docs

[aliases]
# Define setup.py command aliases here
test = pytest

[tool:pytest]
addopts = --verbose
testpaths = tests
